--- a/templates/user/profile.html.twig
+++ b/templates/user/profile.html.twig
@@ -79,7 +79,7 @@
 		</button>
 		{{ form_end(userProfileForm) }}
 	{# END: userProfileForm #}
-		{# <a class="display-none page__link page__delete-link page__delete-my-user-account-link page__delete-user-link page__link_background-color_red page__link_color_white" id="delete-my-user-account-link" href="{{ path('user_delete', {'id':app.user.id, 'token':csrf_token('user-delete' ~ app.user.id)} ) }}" data-userfirstname="{{ app.user.firstName }}" data-userlastname="{{ app.user.lastName }}">
+		{# <a class="display-none page__link page__delete-link page__delete-my-user-account-link page__user-delete-link page__link_background-color_red page__link_color_white" id="delete-my-user-account-link" href="{{ path('user_delete', {'id':app.user.id, 'token':csrf_token('user-delete' ~ app.user.id)} ) }}" data-userfirstname="{{ app.user.firstName }}" data-userlastname="{{ app.user.lastName }}">
 					Supprimer mon compte
 				</a> #}
 	</section>
