use app.colors to backup the colors app to one and only location + update checkIfPurchaseReference + move in admin folder the search entity related only to the admin

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2085,7 +2085,8 @@ body {
   }
 
   .form-field__input::placeholder {
-    font-size: 1.4em;
+    font-family: "Courier New", Courier, monospace;
+    font-size: 1em;
   }
 
   .saturn {
