--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1160,18 +1160,18 @@ body {
 
   .term h4 {
     text-align: left;
-    margin: 2em 0 1em;
     font-weight: normal;
+    margin: 2em 0 1em 0;
   }
 
   .term h3 {
     text-align: left;
-    margin: 2em 0 1em;
     font-weight: normal;
+    margin: 2em 0 1em 0;
   }
 
   .term h3:nth-child(1) {
-    margin: 0 0 1em;
+    margin: 0 0 1em 0;
   }
 
   .term-customer-service h4 {
