code form.isInputInError() to fix bug in JavaScript form security check + update file names and move files

--- a/templates/purchase/purchase.html.twig
+++ b/templates/purchase/purchase.html.twig
@@ -57,7 +57,7 @@
 		<div class="form-field form-field-purchase-checkout-method display-none">
 			{#! TODO START: Make Paypal checkout.  #}
 			{# Paypal #}
-			{# {{ paypalCheckout.showUserInterface()|raw }} #}
+			{# {{ payPalApi.showUserInterface()|raw }} #}
 			{#! TODO END: Paypal checkout  #}
 			{{ form_label(purchaseCreateForm, 'Méthode de paiment:', { 'label_attr': { 'class': 'form-field__label form-field__checkout-method-label display-none' }}
 			) }}
