--- a/templates/admin/user/list.html.twig
+++ b/templates/admin/user/list.html.twig
@@ -9,23 +9,22 @@
 {% block body %}
 	<section class="page">
 		<h2>Utilisateurs</h2>
-		{# START: adminUserSearchForm #}
-		{{ form_start(adminUserSearchForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-user-search-form' }}
+		{{ form_start(adminUserSearchByLastNameForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-user-search-by-name-form' }}
 		) }}
 		<div class="form-field">
-			{{ form_label(adminUserSearchForm, 'Nom:', { 'label_attr': { 'class': 'form-field__label form-field__user-last-name-label display-none' }}) }}
-			{{ form_widget(adminUserSearchForm.lastName, { 'id': 'user-last-name-input', 'attr': {'class': 'form-field__input form-field__user-last-name-input form-field__input_color_black', 'placeholder': '🔍 Rechercher par nom' }}
+			{{ form_label(adminUserSearchByLastNameForm, 'Nom:', { 'label_attr': { 'class': 'form-field__label form-field__user-last-name-label display-none' }}) }}
+			{{ form_widget(adminUserSearchByLastNameForm.lastName, { 'id': 'user-last-name-input', 'attr': {'class': 'form-field__input form-field__user-last-name-input form-field__input_color_black', 'placeholder': '🔍 Rechercher par nom' }}
 			) }}
 			<p class="error-message error-message_color_red error-message-user-last-name-empty display-none">
 				Merci de saisir un nom.
 			</p>
-			{{ form_errors(adminUserSearchForm.lastName) }}
+			{{ form_errors(adminUserSearchByLastNameForm.lastName) }}
 		</div>
+		{# adminUserSearchByLastNameForm submit button #}
 		<button type="submit" class="page__button page__submit-button page__search-button page__button_background-color_blue page__button_color_white" id="admin-user-search-button">
 			Rechercher
 		</button>
-		{{ form_end(adminUserSearchForm) }}
-		{# END: adminUserSearchForm #}
+		{{ form_end(adminUserSearchByLastNameForm) }}
 		<a class="page__link page__create-link page__link_background-color_dodger-blue page__link_color_white" href="{{ path('admin_user_create') }}" id="create-user-link">Créer</a>
 		<div class="neptune">
 			{% for user in users %}
