--- a/templates/admin/address/list.html.twig
+++ b/templates/admin/address/list.html.twig
@@ -11,23 +11,22 @@
 		<h2>
 			Adresses
 		</h2>
-		{# START: addressSearchForm #}
-		{{ form_start(addressSearchForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'address-search-form' }}
+		{{ form_start(addressSearchByCityForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'address-search-by-city-form' }}
 		) }}
 		<div class="form-field">
-			{{ form_label(addressSearchForm, 'Ville:', { 'label_attr': { 'class': 'form-field__label form-field__address-city-label display-none' }}) }}
+			{{ form_label(addressSearchByCityForm, 'Ville:', { 'label_attr': { 'class': 'form-field__label form-field__address-city-label display-none' }}) }}
 
-			{{ form_widget(addressSearchForm.city, { 'id': 'address-city-input', 'attr': {'class': 'form-field__input form-field__address-city-input form-field__input_color_black', 'placeholder': '🔍 Rechercher par ville' }}) }}
+			{{ form_widget(addressSearchByCityForm.city, { 'id': 'address-city-input', 'attr': {'class': 'form-field__input form-field__address-city-input form-field__input_color_black', 'placeholder': '🔍 Rechercher par ville' }}) }}
 			<p class="error-message error-message_color_red error-message-address-city-empty display-none">
 				Merci de saisir un nom de ville.
 			</p>
-			{{ form_errors(addressSearchForm.city) }}
+			{{ form_errors(addressSearchByCityForm.city) }}
 		</div>
+		{# addressSearchByCityForm submit button #}
 		<button type="submit" class="page__button page__submit-button page__search-button page__button_background-color_blue page__button_color_white" id="address-search-button">
 			Rechercher
 		</button>
-		{{ form_end(addressSearchForm) }}
-		{# END: addressSearchForm #}
+		{{ form_end(addressSearchByCityForm) }}
 		<div
 			class="neptune">
 			{# START: card for mobile #}
