--- a/templates/admin/address/user-list.html.twig
+++ b/templates/admin/address/user-list.html.twig
@@ -16,8 +16,7 @@
 			{{ user.firstName }}
 			{{ user.lastName }}
 		</h2>
-		{# START: addressSearchForm #}
-		{{ form_start(addressSearchForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'address-search-form' }}
+		{{ form_start(addressSearchForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'address-search-by-city-form' }}
 		) }}
 		<div class="form-field">
 			{{ form_label(addressSearchForm, 'Ville:', { 'label_attr': { 'class': 'form-field__label form-field__address-city-label display-none' }}) }}
@@ -27,11 +26,11 @@
 			</p>
 			{{ form_errors(addressSearchForm.city) }}
 		</div>
+		{# addressSearchForm submit button #}
 		<button type="submit" class="page__button page__submit-button page__search-button page__button_background-color_blue page__button_color_white" id="address-search-button">
 			Rechercher
 		</button>
 		{{ form_end(addressSearchForm) }}
-		{# END: addressSearchForm #}
 		<a class="page__link page__create-link page__link_background-color_dodger-blue page__link_color_white" href="{{ path('admin_address_create', {'id': user.id}) }}" id="create-address-link">Créer</a>
 		<div
 			class="neptune">
