--- a/templates/admin/category/list.html.twig
+++ b/templates/admin/category/list.html.twig
@@ -9,23 +9,22 @@
 {% block body %}
 	<section class="page">
 		<h2>Catégories</h2>
-		{# START: categorySearchForm #}
-		{{ form_start(categorySearchForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'category-search-form' }}
+		{{ form_start(categorySearchByNameForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'category-search-by-name-form' }}
 		) }}
 		<div class="form-field">
-			{{ form_label(categorySearchForm, 'Rechercher par nom:', { 'label_attr': { 'class': 'form-field__label form-field__category-name-label display-none' }}) }}
+			{{ form_label(categorySearchByNameForm, 'Rechercher par nom:', { 'label_attr': { 'class': 'form-field__label form-field__category-name-label display-none' }}) }}
 
-			{{ form_widget(categorySearchForm.name, { 'id': 'category-name-input', 'attr': {'class': 'form-field__input form-field__category-name-input form-field__input_color_black', 'placeholder': '🔍 Rechercher par nom' }}) }}
+			{{ form_widget(categorySearchByNameForm.name, { 'id': 'category-name-input', 'attr': {'class': 'form-field__input form-field__category-name-input form-field__input_color_black', 'placeholder': '🔍 Rechercher par nom' }}) }}
 			<p class="error-message error-message_color_red error-message-category-name-empty display-none">
 				Merci de saisir un nom.
 			</p>
-			{{ form_errors(categorySearchForm.name) }}
+			{{ form_errors(categorySearchByNameForm.name) }}
 		</div>
+		{# categorySearchByNameForm submit button #}
 		<button type="submit" class="page__button page__submit-button page__search-button page__button_background-color_blue page__button_color_white" id="category-search-button">
 			Rechercher
 		</button>
-		{{ form_end(categorySearchForm) }}
-		{# END: categorySearchForm #}
+		{{ form_end(categorySearchByNameForm) }}
 		<a class="page__link page__create-link page__link_background-color_dodger-blue page__link_color_white" href="{{ path('admin_category_create') }}" id="create-category-link">Créer</a>
 		<div class="neptune">
 			{% for category in categories %}
