--- a/templates/admin/purchase/list.html.twig
+++ b/templates/admin/purchase/list.html.twig
@@ -9,22 +9,21 @@
 {% block body %}
 	<section class="page">
 		<h2>Commandes</h2>
-		{# START: purchaseSearchForm #}
-		{{ form_start(purchaseSearchForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'purchase-search-form' }}
+		{{ form_start(purchaseSearchByReferenceForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'purchase-search-by-reference-form' }}
 		) }}
 		<div class="form-field">
-			{{ form_label(purchaseSearchForm, 'Référence:', { 'label_attr': { 'class': 'form-field__label form-field__purchase-reference-label display-none' }}) }}
-			{{ form_widget(purchaseSearchForm.reference, { 'id': 'purchase-reference-input', 'attr': {'class': 'form-field__input form-field__purchase-reference-input form-field__input_color_black', 'placeholder': '🔍 Rechercher par référence' }}) }}
+			{{ form_label(purchaseSearchByReferenceForm, 'Référence:', { 'label_attr': { 'class': 'form-field__label form-field__purchase-reference-label display-none' }}) }}
+			{{ form_widget(purchaseSearchByReferenceForm.reference, { 'id': 'purchase-reference-input', 'attr': {'class': 'form-field__input form-field__purchase-reference-input form-field__input_color_black', 'placeholder': '🔍 Rechercher par référence' }}) }}
 			<p class="error-message error-message_color_red error-message-purchase-reference display-none">
 				Merci de saisir une référence.
 			</p>
-			{{ form_errors(purchaseSearchForm.reference) }}
+			{{ form_errors(purchaseSearchByReferenceForm.reference) }}
 		</div>
+		{# purchaseSearchByReferenceForm submit button #}
 		<button type="submit" class="page__button page__submit-button page__search-button page__button_background-color_blue page__button_color_white" id="purchase-search-button">
 			Rechercher
 		</button>
-		{{ form_end(purchaseSearchForm) }}
-		{# END: purchaseSearchForm #}
+		{{ form_end(purchaseSearchByReferenceForm) }}
 		<div
 			class="neptune">
 			{# START: card for mobile #}
