--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,11 +12,12 @@
 			<link rel="stylesheet" href="{{ asset('assets/css/reset.css') }}"/>
 			<link
 			rel="stylesheet" href="{{ asset('assets/css/style.css') }}"/>
-			{# Google Fonts : Roboto #}
+			{# Google Fonts's API connexion #}
 			<link rel="preconnect" href="https://fonts.googleapis.com">
-			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 			<link
-			href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
+			rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+			{# Google Fonts: Roboto #}
+			<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
 		{% endblock %}
 	</head>
 	<body>
